# todo.hs

./: .gitignore  .nvim.lua  .travis.yml  CHANGELOG.md  LICENSE  PULL_REQUEST_TEMPLATE.md  README.md  clean.hint  package.yaml  stack.yaml  todo.cabal
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: pull-request.yaml  release.yaml
app/: Main.hs
res/: commandList.txt  todo.txt  usage.txt
res/commands/: add.txt  addx.txt  all.txt  append_prepend.txt  archive.txt  burndown.txt  cmds.txt  complete.txt  completed.txt  delete.txt  due.txt  edit.txt  help.txt  list.txt  listaddons.txt  listpriority.txt  priority.txt  projects.txt  recur.txt  repeat.txt  replace.txt  search.txt  standup.txt  swap.txt  today.txt  version.txt  yesterday.txt
res/topics/: addons.txt  at.txt  duedate.txt  recurring_tasks.txt  threshold.txt
scripts/: deploy.sh
src/: Commands.hs  FileHandler.hs  Parser.hs  RegEx.hs  Tasks.hs  Util.hs  Version.hs
src/App/: Resources.hs
src/Control/Effects/: Arguments.hs
src/Control/Monad/: Arguments.hs  Date.hs  EnvVar.hs  FileSystem.hs  Process.hs
src/Text/: Color.hs
src/Todo/: Addons.hs  App.hs  Commands.hs  HelpInfo.hs  Parser.hs  RegEx.hs  Tasks.hs  Util.hs
src/Todo/Commands/: Burndown.hs  Helpers.hs
src/Todo/Parser/: Atoms.hs  Recur.hs  Tasks.hs
test/: CommandsSpec.hs  ParserSpec.hs  RegExSpec.hs  TasksSpec.hs  UtilSpec.hs
test/Control/Monad/: ArgumentsSpec.hs  DateSpec.hs  FileSystemSpec.hs
test/Todo/: AppSpec.hs  ParserSpec.hs  RegExSpec.hs  TasksSpec.hs  UtilSpec.hs
test/Todo/Commands/: BurndownSpec.hs
test/Todo/Parser/: AtomsSpec.hs  TasksSpec.hs
