name:                todo
version:             0.2.1.0
-- synopsis:
-- description:
homepage:            https://github.com/jecxjo/todo.hs#readme
license:             BSD3
license-file:        LICENSE
author:              Jeff Parent
maintainer:          jeff@commentedcode.org
copyright:           2016 Jeff Parent
category:            Productivity
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Tasks
                     , Util
                     , Parser
                     , FileHandler
                     , Commands
                     , Version
  build-depends:       base >= 4.7 && < 5
                     , parsec
                     , text
                     , directory
                     , filepath
                     , time
                     , transformers
  default-language:    Haskell2010

executable todo
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall
  build-depends:       base
                     , todo
  default-language:    Haskell2010

test-suite todo-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hspec
                     , todo
                     , parsec
                     , text
                     , directory
                     , filepath
                     , regex-posix
                     , time
  ghc-options:         -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jecxjo/todo.hs
